Add modified htm, css, readme and js files

--- a/style.css
+++ b/style.css
@@ -18,11 +18,10 @@ header {
   padding: 5%;
 }
 
-/*------------------Nav-var------------------*/
+/* ------------------Nav-var------------------ */
 .logo {
- width:50px;
- height: 50px;
- display: none;
+  width: 50px;
+  height: 50px;
 }
 
 .nav-bar {
@@ -30,7 +29,6 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  
 }
 
 .burguer-button {
@@ -54,7 +52,11 @@ header {
   display: none;
 }
 
-/*----------------Mobile menu--------------*/
+.black-bar {
+  display: none;
+}
+
+/* ----------------Mobile menu-------------- */
 
 .mobile-menu {
   background: rgba(39, 42, 50, 0.95);
@@ -105,10 +107,9 @@ header {
   margin-top: 10px;
 }
 
+/* ------------------Home-page------------------- */
 
-/*------------------Home-page-------------------*/
-
-.home-page{
+.home-page {
   background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url(Capstone-img/Backimage.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -125,7 +126,6 @@ h1 {
   color: #ec5242;
   font-size: 40px;
   font-weight: 900;
-  
 }
 
 .main-paragraph {
@@ -139,6 +139,7 @@ h1 {
   border: 3px solid white;
   background-color: rgb(247, 247, 247);
   padding: 5% 3%;
+  line-height: 1, 5;
 }
 
 .date {
@@ -146,30 +147,29 @@ h1 {
   font-size: 25px;
 }
 
-/*---------------------Events-------------------------*/
+/* ---------------------Events------------------------- */
 
 .events {
- background-image: url(Capstone-img/pattern_bg.png);
- background-color: #272a31;
- padding: 5%;
+  background-image: url(Capstone-img/pattern_bg.png);
+  background-color: #272a31;
+  padding: 5%;
 }
 
 .event-container {
   display: flex;
   align-items: center;
   flex-direction: column;
-} 
+}
 
 .events h2 {
   color: white;
-  font-size: 5vw;
+  font-size: 2, 5vw;
   font-weight: 400;
   text-align: center;
 }
 
 .red-line {
-
-  width: 7vh;
+  width: 10vw;
   height: 2px;
   background-color: #ec5242;
   margin-top: 10px;
@@ -191,26 +191,26 @@ h1 {
   gap: 10%;
   align-items: center;
   padding: 2%;
- }
+}
 
- .event-li:hover {
+.event-li:hover {
   border: 2px solid white;
- }
+}
 
- .event {
+.event {
   color: #ec5242;
   font-size: 13px;
   font-weight: 600;
   width: 10%;
- }
+}
 
- .event-comment {
+.event-comment {
   font-size: 12px;
   color: white;
   width: 55%;
- }
+}
 
- .tickets {
+.tickets {
   width: 70%;
   height: 40px;
   border: none;
@@ -220,77 +220,81 @@ h1 {
   text-decoration: none;
   color: white;
   margin-top: 3%;
- }
+}
 
- /*----------------Standings-----------------*/
+.join {
+  display: none;
+}
 
- .top-standing {
+/* ----------------Standings----------------- */
+
+.top-standing {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 5%;
- }
+}
 
- .top-standing h2 {
+.top-standing h2 {
   text-align: center;
-  width: 2,5vw;
- }
+  width: 2, 5vw;
+}
 
- #cowboys-container {
+#cowboys-container {
   display: flex;
   flex-direction: column;
   width: 100%;
   gap: 5vh;
   margin-top: 20px;
- }
+}
 
- .project-details {
+.project-details {
   display: flex;
   flex-direction: column;
- }
+}
 
- .project-card {
+.project-card {
   display: flex;
   gap: 7%;
   align-items: center;
- }
+}
 
- .project-card img {
+.project-card img {
   width: 25vw;
- }
+}
 
- .project-card h3 {
-   font-size: 14px;
- }
+.project-card h3 {
+  font-size: 1, 5vw;
+}
 
- .project-card p {
-  font-size: 12px;
- }
+.project-card p {
+  font-size: 1, 5vw;
+}
 
- .project-from {
+.project-from {
   color: #ec5242;
- }
+}
 
- /*---------------------Sponsors---------------------*/
+/* ---------------------Sponsors--------------------- */
 
- .sponsors {
+.sponsors {
   background-color: #333;
   padding: 5%;
- }
+}
 
- .sponsors-container {
+.sponsors-container {
   display: flex;
   flex-direction: column;
   align-items: center;
- }
+}
 
- .sponsors-content {
+.sponsors-content {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
- 
- }
+  justify-content: space-evenly;
+  align-items: center;
+}
 
 .sponsor-line {
   width: 7vh;
@@ -299,51 +303,340 @@ h1 {
   margin-top: 10px;
 }
 
- .sponsors-content li {
+.sponsors-content li {
   list-style: none;
- }
+}
 
- .sponsors-content img {
-   width: 18vw;
-   margin: 2.5vw;
-   filter: grayscale(100%);
- }
+.sponsors-content img {
+  width: 18vw;
+  margin: 2.5vw;
+}
 
- .sponsors h2 {
+.sponsors h2 {
   color: white;
-  font-size: 5vw;
+  font-size: 2, 5vw;
   font-weight: 400;
   text-align: center;
- }
+}
 
- /*---------------Footer---------------*/
+/* ---------------Footer--------------- */
 
- footer {
+footer {
   padding: 5%;
- }
- .img-footer {
-  width: 20%;
- }
+}
 
- .footer-content {
+.img-footer {
+  width: 20%;
+}
+
+.footer-content {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 20%;
- }
+}
 
- .footer-content p {
+.footer-content p {
   font-size: 13px;
- }
+}
 
- @media only screen and (min-width: 768px) {
+/* ------------------------About------------------------ */
+
+.logo-container {
+  padding: 5%;
+}
+
+.logo-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.logo-content img {
+  width: 50vw;
+}
+
+.logo-content h2 {
+  font-size: 5vw;
+  font-weight: 400;
+  text-align: center;
+}
+
+.logo-content p {
+  font-size: 12px;
+}
+
+/* ----------------------Best section---------------------- */
+
+.best-container {
+  padding: 5%;
+}
+
+.best-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.best-content h2 {
+  font-size: 5vw;
+  font-weight: 400;
+  text-align: center;
+}
+
+.best-content p {
+  font-size: 12px;
+}
+
+.best-content img {
+  width: 60%;
+  filter: hue-rotate(500deg);
+}
+
+#main-paragraph-about {
+  text-align: center;
+}
+
+#h1-about {
+  text-align: center;
+}
+
+#secundary-paragraf-about {
+  text-align: center;
+}
+
+button:hover {
+  border: 2px solid white;
+}
+
+.sponsors-about {
+  background-color: #333;
+}
+
+.best-images {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+@media only screen and (min-width: 768px) {
   .burguer-button {
     display: none;
   }
 
   .logo {
     display: block;
-    width: 70px;
-    height: 70px;
   }
- }
+
+  .desk-ul {
+    display: flex;
+    list-style: none;
+    gap: 10px;
+  }
+
+  .desk-ul li {
+    display: flex;
+    align-items: center;
+  }
+
+  .desk-ul a {
+    text-decoration: none;
+    color: #4f4f4f;
+    font-weight: 600;
+  }
+
+  header {
+    padding: 0;
+  }
+
+  .black-bar {
+    display: flex;
+    background: rgb(62, 62, 62);
+    left: 0;
+    height: 20px;
+    text-decoration: none;
+    padding: 0 10% 5px 10%;
+    justify-content: flex-end;
+  }
+
+  .black-bar ul {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .black-bar li {
+    display: flex;
+    align-items: center;
+  }
+
+  .black-bar a {
+    text-decoration: none;
+    color: white;
+  }
+
+  .nav-bar {
+    position: relative;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 0 10%;
+    margin-bottom: 3px;
+  }
+
+  /* ------------------Home-page------------------- */
+
+  .home-page {
+    padding: 10%;
+  }
+
+  .secundary-paragraf {
+    font-size: 16px;
+  }
+
+  /* ---------------------Events------------------------- */
+
+  .events {
+    padding: 1% 10% 5% 10%;
+  }
+
+  .event {
+    width: 100%;
+    text-align: center;
+  }
+
+  .event-comment {
+    width: 100%;
+    text-align: center;
+  }
+
+  .events ul {
+    flex-direction: row;
+  }
+
+  .event-li {
+    flex-direction: column;
+    height: 33vh;
+    width: 15vw;
+    align-items: center;
+  }
+
+  .tickets {
+    display: none;
+  }
+
+  .join {
+    display: block;
+    color: white;
+    font-size: 20px;
+    margin-top: 20px;
+  }
+
+  /* ----------------Standings----------------- */
+
+  .project-card img {
+    width: 10vw;
+  }
+
+  #cowboys-container {
+    display: grid;
+    grid-template-columns: repeat(2, 35vw);
+    column-gap: 2vw;
+  }
+
+  .top-standing {
+    padding: 3% 10% 3% 10%;
+  }
+
+  /* ----------------Sponsor----------------- */
+
+  .sponsors {
+    padding: 3% 10% 3% 10%;
+  }
+
+  .sponsors-content img {
+    width: 10vw;
+  }
+
+  /* ---------------Footer--------------- */
+
+  footer {
+    padding: 3% 10% 3% 10%;
+  }
+
+  .img-footer {
+    width: 15%;
+  }
+
+  .footer-content {
+    justify-content: center;
+  }
+
+  .footer-content p {
+    font-size: 16px;
+  }
+
+  /* ------------------------About------------------------ */
+
+  .logo-container {
+    padding: 3% 10% 3% 10%;
+  }
+
+  .logo-content img {
+    width: 20vw;
+  }
+
+  .logo-content h2 {
+    font-size: 2vw;
+  }
+
+  .logo-content p {
+    font-size: 16px;
+  }
+
+  #about-footer {
+    background-color: #272a31;
+  }
+
+  #about-p {
+    color: white;
+  }
+
+  /* ----------------------Best section---------------------- */
+
+  .best-container {
+    padding: 3% 10% 3% 10%;
+  }
+
+  .best-images {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+  }
+
+  .best-content img {
+    width: 50%;
+  }
+
+  .sponsors-about {
+    display: none;
+  }
+
+  .best-content h2 {
+    font-size: 2vw;
+  }
+
+  .best-content p {
+    font-size: 16px;
+  }
+
+  .red-line {
+    width: 5vw;
+  }
+}
